--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Robotics</title>
+</head>
+<body>
+ <!--Started Header-->
+ <header class="header">
+    <div class="container">
+        <div class="header-logo">
+            <img class="logo-img" src="img/logo.png">
+            <h1 class="logo-title">Robotics</h1>
+        </div>
+    </div>
 
+    <div class="header-menu">
+        <ul class="menu">
+            <li class="menu-item">
+                <a class="menu-link" href="#">Home</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="#">About</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="#">Products</a>
+            </li>
+        </ul>
+    </div>
+
+ </header>   
+ <!--End Header-->
+
+ <!--Start Main-->
+ <main class="main">
+    <!--Start banner section-->
+    <section class="banner-section">
+        <div class="container">
+            <div class="bannet-text">
+                <h2 class="banner-title">Products</h2>
+                <div class="banner-description">
+                    <a href="#" class="menu-link">Home</a> &#x2192
+                    <a href="#" class="menu-link">Products</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="cards-text">
+        <h2 class="cards-title">Featured Robotics Products to Show</h2>
+        <div class="cards-description">Who are in extremely love width eco friedly system</div>
+    </div>
+    <div class="cards">
+        <div class="cards-row">
+            <div class="card">
+                <img class="card-img" src="img/p1.png">
+                <div class="card-body">
+                    <h3 class="card-title">The Upper Eye</h3>
+                    <div class="card-text">Who are in extremely love width eco friedly system</div>
+                    <div class="card-button">
+                        <a class="card-link" href="#">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End banner section-->
+ </main>
+ <!--End main-->
+
+ <!--Start Footer-->
+ <footer class="footer">
+    <div class="container">
+        <div class="copyright">Copyright 2023 ALL right reserved By Andrey</div>
+    </div>
+ </footer>
+ <!--End Footer-->
+</body>
+</html>
